major changes to README. minor changes to mac installer.